Hugo: align the underline on navigation hover correctly
This fixes the spacing between the text and underline of the navigation link.

- The changes take effect in the navigation of the header, footer
and overview pages like /docs and /docs/language-guide

For https://linear.app/usmedia/issue/CUE-252

Closes #376 as merged as of commit ef9f94a9.

Reviewed-on: https://review.gerrithub.io/c/cue-lang/cuelang.org/+/556837
TryBot-Result: CUEcueckoo <cueckoo@cuelang.org>

--- a/hugo/assets/scss/components/nav.scss
+++ b/hugo/assets/scss/components/nav.scss
@@ -70,6 +70,7 @@
     &__text {
         background: linear-gradient(var(--nav-link-border-color), var(--nav-link-border-color)) no-repeat 100% 100%;
         background-size: 0 var(--nav-link-border-width);
+        display: inline-block;
         position: relative;
         transition:
             background-color 0.2s ease-in-out,
